--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>TurnBasedClient</title>
+  <title>Boardgame.io Angular</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
