--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -4,13 +4,12 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Boardgame.io Angular</title>
+  <title>Angular boardgame.io Demo</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <tb-root></tb-root>
+  <bio-root></bio-root>
 </body>
 </html>
